--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 
     <body>
         <h1>Whats up?</h1>
+        <h3>Heres a list of my favorite things</h3>
+        <ol>
+            <li>The Charlotte Hornets</li>
+            <li>The Philadelphia Eagles</li>
+            <li>Pizza Bagels</li>
+            <li>Act 2 of The Book Of Mormon</li>
+            <li>The Song "Candy Store" From Heathers</li>
+        </ol>
     </body>
 </html>
